--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-*.elf
-*.rel
+# Build system outputs
+build
+out
+build.ninja
+
+# Tool / user files
 .vscode
-build.*
-*.bat
 porting
-*.bin
+*.bat
